--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -39,7 +39,7 @@ spring:
 
 telegram:
   api-url: https://api.telegram.org/
-  webhook-path: https://4c17-46-138-30-102.eu.ngrok.io # https://api.telegram.org/bot5128213958:AAERMqZfvd5YsTwGRUAnYqsCBHu_2iMR6DM/setWebhook?url=https://4727-46-138-30-102.eu.ngrok.io
+  webhook-path: ${telegram-web-hook-path} #https://4c17-46-138-30-102.eu.ngrok.io # https://api.telegram.org/bot5128213958:AAERMqZfvd5YsTwGRUAnYqsCBHu_2iMR6DM/setWebhook?url=https://4727-46-138-30-102.eu.ngrok.io
 
 yandex:
   api-weather-url: https://api.weather.yandex.ru/v2/informers
